[project]
name = "healthcare-qp-model"
version = "0.1.0"
description = "Concrete healthcare clinical prediction model with QP, cutoff date, OOT validation, and target population"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
]

[project.scripts]
healthcare-qp-model = "healthcare_qp_model.main:run_example"

[tool.uv]
package = true

